<resources>
    <string name="app_name">BadlavSeva Samiti(NGO)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_aboutus">About NGO</string>
    <string name="menu_aboutteam">About Team</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_work">Work</string>
    <string name="menu_slideshow">Events Organised</string>

    <string name="menu_internship">Internships</string>

    <string name="menu_addevent">Add Event</string>

</resources>