<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.badlavsevasamitingo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.badlavsevasamitingo.ui.aboutus.AboutusFragment"
        android:label="@string/menu_aboutus"
        tools:layout="@layout/fragment_aboutus" />
    <fragment
        android:id="@+id/nav_aboutteam"
        android:name="com.example.badlavsevasamitingo.ui.aboutteam.AboutteamFragment"
        android:label="@string/menu_aboutteam"
        tools:layout="@layout/fragment_aboutteam" />


    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.badlavsevasamitingo.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_work"
        android:name="com.example.badlavsevasamitingo.ui.work.WorkFragment"
        android:label="@string/menu_work"
        tools:layout="@layout/fragment_work" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.badlavsevasamitingo.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_internship"
        android:name="com.example.badlavsevasamitingo.ui.internship.InternshipFragment"
        android:label="@string/menu_internship"
        tools:layout="@layout/fragment_intenship" />


    <fragment
        android:id="@+id/nav_addevent"
        android:name="com.example.badlavsevasamitingo.ui.addevent.AddeventFragment"
        android:label="Add Event"
        tools:layout="@layout/fragment_addevent" />


</navigation>